@@ -1,0 +1,67 @@
+/**
+ * Copyright 2005-2008 Noelios Technologies.
+ * 
+ * The contents of this file are subject to the terms of the following open
+ * source licenses: LGPL 3.0 or LGPL 2.1 or CDDL 1.0 (the "Licenses"). You can
+ * select the license that you prefer but you may not use this file except in
+ * compliance with one of these Licenses.
+ * 
+ * You can obtain a copy of the LGPL 3.0 license at
+ * http://www.gnu.org/licenses/lgpl-3.0.html
+ * 
+ * You can obtain a copy of the LGPL 2.1 license at
+ * http://www.gnu.org/licenses/lgpl-2.1.html
+ * 
+ * You can obtain a copy of the CDDL 1.0 license at
+ * http://www.sun.com/cddl/cddl.html
+ * 
+ * See the Licenses for the specific language governing permissions and
+ * limitations under the Licenses.
+ * 
+ * Alternatively, you can obtain a royaltee free commercial license with less
+ * limitations, transferable or non-transferable, directly at
+ * http://www.noelios.com/products/restlet-engine
+ * 
+ * Restlet is a registered trademark of Noelios Technologies.
+ */
+
+package com.noelios.restlet.util;
+
+import java.util.logging.Handler;
+import java.util.logging.LogRecord;
+import java.util.logging.Logger;
+
+/**
+ * Special handler that logs in the console all log message sent through the log
+ * manager. For each log record, it displays the source logger name and the
+ * actual message.
+ * 
+ * This is particularly useful for debugging.
+ * 
+ * @author Jerome Louvel
+ */
+public class TraceHandler extends Handler {
+
+    /**
+     * Registers the handler with the root logger.
+     */
+    public static void register() {
+        Logger rootLogger = Logger.getLogger("");
+        rootLogger.addHandler(new TraceHandler());
+    }
+
+    @Override
+    public void close() throws SecurityException {
+    }
+
+    @Override
+    public void flush() {
+    }
+
+    @Override
+    public void publish(LogRecord record) {
+        System.out.println("[" + record.getLoggerName() + "] "
+                + record.getMessage());
+    }
+
+}
